--- a/System.Net.Http.LoggingHttpMessageHandler/System.Net.Http.LoggingHttpMessageHandler.csproj
+++ b/System.Net.Http.LoggingHttpMessageHandler/System.Net.Http.LoggingHttpMessageHandler.csproj
@@ -11,6 +11,7 @@
     <PackageTags>systemnethttp, http, httpclient, logging, messagehandler, delegatinghandler</PackageTags>
     <Description>Provides a message handler for HttpClient which allows to enable logging of request/response related info. In comparison with Microsoft.Extensions.Http.Logging.LoggingHttpMessageHandler it allows to log request/response content.
 </Description>
+    <PackageId>HttpClient.Extensions.LoggingHttpMessageHandler</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
