--- a/System.Net.Http.LoggingHttpMessageHandler/System.Net.Http.LoggingHttpMessageHandler.csproj
+++ b/System.Net.Http.LoggingHttpMessageHandler/System.Net.Http.LoggingHttpMessageHandler.csproj
@@ -12,10 +12,11 @@
     <Description>Provides a message handler for HttpClient which allows to enable logging of request/response related info. In comparison with Microsoft.Extensions.Http.Logging.LoggingHttpMessageHandler it allows to log request/response content.
 </Description>
     <PackageId>HttpClient.Extensions.LoggingHttpMessageHandler</PackageId>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
