--- a/HttpClient.Extensions.LoggingHttpMessageHandler/HttpClient.Extensions.LoggingHttpMessageHandler.csproj
+++ b/HttpClient.Extensions.LoggingHttpMessageHandler/HttpClient.Extensions.LoggingHttpMessageHandler.csproj
@@ -4,15 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Alexander Shabunevich</Authors>
     <Copyright>Copyright © 2018 Alexander Shabunevich</Copyright>
-    <PackageLicenseUrl>https://github.com/Iamcerba/System.Net.Http.LoggingHttpMessageHandler/blob/master/LICENSE.txt</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/Iamcerba/System.Net.Http.LoggingHttpMessageHandler</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/Iamcerba/System.Net.Http.LoggingHttpMessageHandler</RepositoryUrl>
+    <PackageLicenseUrl>https://github.com/Iamcerba/HttpClient.Extensions.LoggingHttpMessageHandler/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Iamcerba/HttpClient.Extensions.LoggingHttpMessageHandler</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Iamcerba/HttpClient.Extensions.LoggingHttpMessageHandler</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>systemnethttp, http, httpclient, logging, messagehandler, delegatinghandler</PackageTags>
     <Description>Provides a message handler for HttpClient which allows to enable logging of request/response related info. In comparison with Microsoft.Extensions.Http.Logging.LoggingHttpMessageHandler it allows to log request/response content.
 </Description>
     <PackageId>HttpClient.Extensions.LoggingHttpMessageHandler</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
