--- a/HttpClient.Extensions.LoggingHttpMessageHandler/HttpClient.Extensions.LoggingHttpMessageHandler.csproj
+++ b/HttpClient.Extensions.LoggingHttpMessageHandler/HttpClient.Extensions.LoggingHttpMessageHandler.csproj
@@ -4,7 +4,6 @@
     <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0;netstandard2.0;net462</TargetFrameworks>
     <Authors>Alexander Shabunevich</Authors>
     <Copyright>Copyright © 2018 Alexander Shabunevich</Copyright>
-    <PackageLicenseUrl>https://github.com/Iamcerba/HttpClient.Extensions.LoggingHttpMessageHandler/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Iamcerba/HttpClient.Extensions.LoggingHttpMessageHandler</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Iamcerba/HttpClient.Extensions.LoggingHttpMessageHandler</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
@@ -13,6 +12,7 @@
     <PackageId>HttpClient.Extensions.LoggingHttpMessageHandler</PackageId>
     <Version>1.0.3</Version>
     <AssemblyVersion>1.0.3.0</AssemblyVersion>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.1'">
